Fix typos and changes fonts

--- a/src/i18n/pt-br.yml
+++ b/src/i18n/pt-br.yml
@@ -28,7 +28,7 @@
   disqus:
     shortname: chicocode-io-pt-br
   error404Title: Não Encontrado
-  error404Message: Parece que você encontrou um link quebrado\nDesculpe-me por isso\nNão exite em reportar esta página
+  error404Message: Parece que você encontrou um link quebrado\nDesculpe-me por isso\nNão hesite em reportar esta página
   konami:
     first: Você encontrou a falha
     second: Pegue sua recompensa
